; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_item.c_is_obstacle.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_item.c_is_obstacle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_obstacle(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @ABS(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @is_plant(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  switch i32 %11, label %13 [
    i32 128, label %12
    i32 129, label %12
  ]

12:                                               ; preds = %10, %10
  store i32 0, i32* %2, align 4
  br label %14

13:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %12, %9
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @ABS(i32) #1

declare dso_local i64 @is_plant(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
